plugins {
    id "com.vanniktech.maven.publish" version "0.28.0"
}

group = 'io.seats'
version = '82.15.0'

apply plugin: 'java'
sourceCompatibility = 11

repositories {
    mavenCentral()
}

import com.vanniktech.maven.publish.SonatypeHost
mavenPublishing {
    publishToMavenCentral(SonatypeHost.S01, true)
    signAllPublications()

    pom {
        name = "seatsio-java"
        description = "The official seats.io Java client library"
        url = "https://github.com/seatsio/seatsio-java"
        licenses {
            license {
                name = "MIT"
                url = "https://github.com/seatsio/seatsio-java/blob/master/LICENSE"
                distribution = "repo"
            }
        }
        developers {
            developer {
                id = "mroloux"
                name = "Matti Roloux"
                url = "https://github.com/mroloux/"
            }
            developer {
                id = "bverbeken"
                name = "Ben Verbeken"
                url = "https://github.com/bverbeken"
            }
        }
        scm {
            url = "https://github.com/seatsio/seatsio-java/"
            connection = "scm:git:git://github.com/seatsio/seatsio-java.git"
            developerConnection = "scm:git:ssh://git@github.com/seatsio/seatsio-java.git"
        }
    }
}

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'com.konghq:unirest-java:3.14.5'
    implementation 'com.google.guava:guava:33.2.1-jre'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
    testImplementation 'org.assertj:assertj-core:3.26.0'
    testImplementation 'commons-io:commons-io:2.16.1'
    testImplementation 'org.awaitility:awaitility:4.2.1'
    testRuntimeOnly "org.slf4j:slf4j-api:2.0.13"
}

test {
    useJUnitPlatform()
    testLogging {
        events 'started', 'passed', 'failed', 'skipped'
        exceptionFormat = 'full'
    }
}
